; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_update_bytes_read.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_update_bytes_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_internal = type { i32, i32, i32, i64, %struct.demuxer* }
%struct.demuxer = type { %struct.stream* }
%struct.stream = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demux_internal*)* @update_bytes_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_bytes_read(%struct.demux_internal* %0) #0 {
  %2 = alloca %struct.demux_internal*, align 8
  %3 = alloca %struct.demuxer*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.stream*, align 8
  store %struct.demux_internal* %0, %struct.demux_internal** %2, align 8
  %7 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %8 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %7, i32 0, i32 4
  %9 = load %struct.demuxer*, %struct.demuxer** %8, align 8
  store %struct.demuxer* %9, %struct.demuxer** %3, align 8
  %10 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %11 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %10, i32 0, i32 3
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %4, align 8
  %13 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %14 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  store i64 0, i64* %5, align 8
  %15 = load %struct.demuxer*, %struct.demuxer** %3, align 8
  %16 = getelementptr inbounds %struct.demuxer, %struct.demuxer* %15, i32 0, i32 0
  %17 = load %struct.stream*, %struct.stream** %16, align 8
  store %struct.stream* %17, %struct.stream** %6, align 8
  %18 = load %struct.stream*, %struct.stream** %6, align 8
  %19 = icmp ne %struct.stream* %18, null
  br i1 %19, label %20, label %35

20:                                               ; preds = %1
  %21 = load %struct.stream*, %struct.stream** %6, align 8
  %22 = getelementptr inbounds %struct.stream, %struct.stream* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %4, align 8
  %25 = add nsw i64 %24, %23
  store i64 %25, i64* %4, align 8
  %26 = load %struct.stream*, %struct.stream** %6, align 8
  %27 = getelementptr inbounds %struct.stream, %struct.stream* %26, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = load %struct.stream*, %struct.stream** %6, align 8
  %29 = getelementptr inbounds %struct.stream, %struct.stream* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %5, align 8
  %32 = add nsw i64 %31, %30
  store i64 %32, i64* %5, align 8
  %33 = load %struct.stream*, %struct.stream** %6, align 8
  %34 = getelementptr inbounds %struct.stream, %struct.stream* %33, i32 0, i32 0
  store i64 0, i64* %34, align 8
  br label %35

35:                                               ; preds = %20, %1
  %36 = load i64, i64* %4, align 8
  %37 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %38 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = sext i32 %39 to i64
  %41 = add nsw i64 %40, %36
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %38, align 8
  %43 = load i64, i64* %4, align 8
  %44 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %45 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = sext i32 %46 to i64
  %48 = add nsw i64 %47, %43
  %49 = trunc i64 %48 to i32
  store i32 %49, i32* %45, align 4
  %50 = load i64, i64* %5, align 8
  %51 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %52 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = sext i32 %53 to i64
  %55 = add nsw i64 %54, %50
  %56 = trunc i64 %55 to i32
  store i32 %56, i32* %52, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
